# health-agentic-workflow-mvp

./: .env  .env.backup  .env.backup.20251003  .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  DEVELOPMENT_RULES.md  Makefile  PROJECT-STRUCTURE.md  README-FULLSTACK.md  README.md  backfill_progress.json  daily_facts_no_NULL.csv  data1757445987065.csv  p2_predictions_complex_2021-01-01_2024-12-31.csv  p2_predictions_simple_2021-01-01_2021-12-31.csv  p2_predictions_simple_2021-01-01_2024-12-31.csv  p2_predictions_simple_2022-01-01_2022-12-31.csv  p2_predictions_simple_2022-03-15_2022-12-15.csv  p2_predictions_simple_2023-01-01_2023-12-31.csv  p2_predictions_simple_2024-01-01_2024-12-31.csv  package-lock.json  package.json  project-structure.txt  project-tree.txt  pyproject.toml  reproduce_9.9.py  reproduce_gemini.py  results_2021_21day.csv  results_2021_7day.csv  results_21day.csv  results_7day.csv  schema.manifest.corrected.yaml  schema.manifest.yaml  test_dynamic_goals.md
.cursor/: api-first-ui.md  failure-patterns.md
backend/: package-lock.json  package.json  server.js
bayes_update/: __init__.py  runner.py
config/: field_mapping.yaml  p1_params.yaml  withings.yaml
data/: p1_residuals_summary.csv  p1_test_metrics.json  p1_test_windows_flex7.csv
docs/: 2021-ANALYSIS-COMPARISON.md  2022-ANALYSIS-RESULTS.md  2022-WINDOW-LENGTH-COMPARISON.md  API-SCHEMA.md  CRON-JOB-FIXES-2025-09-30.md  DEPRECATED.md  ENERGY-BALANCE-MODEL-IMPROVEMENTS.md  ENERGY-BALANCE-MODEL.md  HAE-ASSESSMENT.md  HAE-DATA-REFRESH-PROCEDURE.md  HISTORICAL-MODELING.md  P0-P1-HISTORICAL-ARCHIVE.md  (+10 more)
(+120 files in other folders)
