[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayes-update"
version = "0.1.0"
description = "Bayesian parameter updater for metabolic model parameters"
authors = [{name = "Health Agentic Workflow Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "sqlalchemy>=1.4.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bayes_update*"]
